# orthanc-authorization

./: .dockerignore  .hgignore  AUTHORS  CMakeLists.txt  Dockerfile  Jenkinsfile  NEWS  NOTES.txt  README  README.md  TODO
Plugin/: AccessedResource.cpp  AccessedResource.h  AssociativeArray.cpp  AssociativeArray.h  AuthorizationParserBase.cpp  AuthorizationParserBase.h  AuthorizationWebService.cpp  AuthorizationWebService.h  BaseAuthorizationService.h  CachedAuthorizationService.cpp  CachedAuthorizationService.h  DefaultAuthorizationParser.cpp  DefaultAuthorizationParser.h  DefaultConfiguration.json  Enumerations.cpp  Enumerations.h  IAuthorizationParser.h  IAuthorizationService.h  ICache.h  ICacheFactory.h  MemoryCache.cpp  MemoryCache.h  OrthancResource.cpp  OrthancResource.h  PermissionParser.cpp  PermissionParser.h  Plugin.cpp  ResourceHierarchyCache.cpp  ResourceHierarchyCache.h  Token.cpp  Token.h
Resources/: SyncOrthancFolder.py  TestService.js  WindowsResources.py  WindowsResources.rc
Resources/Orthanc/: LinuxStandardBaseToolchain.cmake  MinGW-W64-Toolchain32.cmake  MinGW-W64-Toolchain64.cmake  MinGWToolchain.cmake
Resources/Orthanc/CMake/: AutoGeneratedCode.cmake  Compiler.cmake  DownloadOrthancFramework.cmake  DownloadPackage.cmake  GoogleTestConfiguration.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h  OrthancPluginException.h  OrthancPluginsExports.cmake
Resources/Orthanc/Sdk-1.3.1/orthanc/: OrthancCPlugin.h
UnitTestsSources/: UnitTestsMain.cpp
scripts/: ciBuildDockerImage.sh  ciPushToAws.sh
